REGRESSION(286055@main): [macOS Debug] ASSERTION FAILED: !m_fragmentsInvalidated in imported/w3c/web-platform-tests/css/css-contain/content-visibility/locked-frame-crash.html (failure in EWS) https://bugs.webkit.org/show_bug.cgi?id=282563 rdar://139236278

Reviewed by Alan Baradlay.

After 286055@main, `shouldPaintOutline` became true for "skipped content" (`content-visibility: auto`) layers,
and this test tries to paint a RenderMultiColumnFlowThread that has never been laid out, and asserts.

Fix by checking for `shouldPaintContent` in the computation of `shouldPaintOutline`.

* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::paintLayerContents):

Canonical link: https://commits.webkit.org/286152@main